import pico.css for global styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <title>js</title>
   </head>
   <body class="text-black font-custom">
-    <h1 class="p-5 text-yellow-300">жиэсс</h1>
+    <h1>жиэсс</h1>
+    <button>Button</button>
+    <input type="submit" />
+    <a href="#" role="button" class="outline">Primary</a>
+    <a href="#" role="button" class="secondary outline">Secondary</a>
+    <a href="#" role="button" class="contrast outline">Contrast</a>
     <script type="module" src="/src/index.js"></script>
   </body>
 </html>
