make toogleTheme script

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" class="scroll-smooth">
+<html lang="ru" class="scroll-smooth" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="public/favicon.ico" />
@@ -7,13 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>js</title>
   </head>
-  <body class="text-black font-custom">
-    <h1>жиэсс</h1>
-    <button>Button</button>
-    <input type="submit" />
-    <a href="#" role="button" class="outline">Primary</a>
-    <a href="#" role="button" class="secondary outline">Secondary</a>
-    <a href="#" role="button" class="contrast outline">Contrast</a>
+  <body class="text-black m-5">
+    <h1>JavaScript</h1>
+    <button class="w-40" id="THEME_BTN">Toggle Theme</button>
     <script type="module" src="/src/index.js"></script>
   </body>
 </html>
