--- a/app/github.html
+++ b/app/github.html
@@ -11,17 +11,23 @@
     <article id="LOADER" class="fixed flex items-center justify-center w-screen h-screen p-0 m-0 text-white" aria-busy="true"></article>
     <main class="container p-5 text-center sm:w-full">
       <header class="flex justify-between">
-        <a class="w-12 sm:w-9" href="https://github.com/bozzhik/js/blob/main/app/github.html" target="_blank">
-          <svg viewBox="0 0 612 603" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path class="GITHUB_LOGO" fill-rule="evenodd" clip-rule="evenodd" d="M306.085 0C136.828 0 0 137.958 0 308.632C0 445.06 87.6704 560.544 209.293 601.417C224.498 604.49 230.068 594.776 230.068 586.605C230.068 579.45 229.567 554.925 229.567 529.371C144.422 547.77 126.691 492.58 126.691 492.58C113.007 456.811 92.7328 447.618 92.7328 447.618C64.8647 428.712 94.7628 428.712 94.7628 428.712C125.676 430.756 141.897 460.392 141.897 460.392C169.257 507.398 213.346 494.117 231.083 485.939C233.614 466.011 241.728 452.215 250.343 444.552C182.433 437.397 110.984 410.827 110.984 292.277C110.984 258.553 123.138 230.961 142.398 209.502C139.359 201.839 128.714 170.153 145.443 127.743C145.443 127.743 171.287 119.566 229.561 159.423C254.51 152.668 280.239 149.231 306.085 149.202C331.93 149.202 358.275 152.783 382.603 159.423C440.883 119.566 466.728 127.743 466.728 127.743C483.456 170.153 472.805 201.839 469.766 209.502C489.533 230.961 501.187 258.553 501.187 292.277C501.187 410.827 429.737 436.883 361.32 444.552C372.472 454.259 382.096 472.652 382.096 501.78C382.096 543.167 381.595 576.384 381.595 586.599C381.595 594.776 387.171 604.49 402.37 601.423C523.993 560.537 611.663 445.06 611.663 308.632C612.164 137.958 474.835 0 306.085 0Z" />
-          </svg>
-        </a>
-        <div id="THEME_BTN" class="w-10 sm:w-7">
-          <img id="sun-icon" style="display: none" class="cursor-pointer" src="/public/theme-switch/sun.svg" alt="" />
-          <img id="moon-icon" style="display: none" class="cursor-pointer" src="/public/theme-switch/moon.svg" alt="" />
+        <div class="flex gap-5">
+          <a class="w-12 sm:w-9" href="../" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 700 750" fill="none"><path class="HEADER_ICONS" fill-rule="evenodd" d="M373.333 746.667 186.667 560 0 373.333l186.667-186.666L373.333 0l99.547 99.557-87.088 87.115L269.5 302.948l584.187-.01-.037 140.786-385.933.011h-198.2l116.27 116.26 87.088 87.114-99.542 99.558Z" clip-rule="evenodd" /></svg>
+          </a>
+        </div>
+        <div class="flex items-center" style="gap: 0.95rem">
+          <a class="w-12 sm:w-9" href="https://github.com/bozzhik/js/blob/main/app/github.html" target="_blank">
+            <svg viewBox="0 0 612 603" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path class="HEADER_ICONS" fill-rule="evenodd" clip-rule="evenodd" d="M306.085 0C136.828 0 0 137.958 0 308.632C0 445.06 87.6704 560.544 209.293 601.417C224.498 604.49 230.068 594.776 230.068 586.605C230.068 579.45 229.567 554.925 229.567 529.371C144.422 547.77 126.691 492.58 126.691 492.58C113.007 456.811 92.7328 447.618 92.7328 447.618C64.8647 428.712 94.7628 428.712 94.7628 428.712C125.676 430.756 141.897 460.392 141.897 460.392C169.257 507.398 213.346 494.117 231.083 485.939C233.614 466.011 241.728 452.215 250.343 444.552C182.433 437.397 110.984 410.827 110.984 292.277C110.984 258.553 123.138 230.961 142.398 209.502C139.359 201.839 128.714 170.153 145.443 127.743C145.443 127.743 171.287 119.566 229.561 159.423C254.51 152.668 280.239 149.231 306.085 149.202C331.93 149.202 358.275 152.783 382.603 159.423C440.883 119.566 466.728 127.743 466.728 127.743C483.456 170.153 472.805 201.839 469.766 209.502C489.533 230.961 501.187 258.553 501.187 292.277C501.187 410.827 429.737 436.883 361.32 444.552C372.472 454.259 382.096 472.652 382.096 501.78C382.096 543.167 381.595 576.384 381.595 586.599C381.595 594.776 387.171 604.49 402.37 601.423C523.993 560.537 611.663 445.06 611.663 308.632C612.164 137.958 474.835 0 306.085 0Z" />
+            </svg>
+          </a>
+          <div id="THEME_BTN" class="w-12 sm:w-9">
+            <img id="sun-icon" style="display: none" class="cursor-pointer" src="/public/theme-switch/sun.svg" alt="" />
+            <img id="moon-icon" style="display: none" class="cursor-pointer" src="/public/theme-switch/moon.svg" alt="" />
+          </div>
         </div>
       </header>
-
       <h1 class="mt-32 mb-3 text-7xl sm:text-5xl">
         <b class="font-bold uppercase">Github</b>
         user search
