fix cards adaptivity

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
         </h1>
         <h2 class="text-2xl font-normal sm:text-lg">This repository was created to store my mini-projects</h2>
       </section>
-
-      <section class="grid grid-cols-4 mx-20 ITEMS_GRID place-items-center sm:grid-cols-1 sm:mx-5">
-        <a href="app/github.html" class="ITEM no-underline border-2 border-solid group w-[20vw] h-[20vw] sm:w-[85vw] sm:h-[85vw] grid place-items-center">
+      <section class="grid grid-cols-4 mx-20 ITEMS_GRID place-items-center xl:grid-cols-3 sm:grid-cols-1 sm:mx-5">
+        <a href="app/github.html" class="ITEM no-underline border-2 border-solid group p-5 xl:w-[24vw] w-[20vw] xl:h-[35vh] h-[20vw] sm:w-[85vw] sm:h-[85vw] grid place-items-center">
           <div>
             <h1 class="mb-0 font-bold">GITHUB API</h1>
             <h2 class="mb-0 text-xl font-normal">
@@ -39,7 +38,7 @@
             </h2>
           </div>
         </a>
-        <a href="app/gradient.html" class="ITEM no-underline border-2 border-solid group w-[20vw] h-[20vw] sm:w-[85vw] sm:h-[85vw] grid place-items-center">
+        <a href="app/gradient.html" class="ITEM no-underline border-2 border-solid group p-5 xl:w-[24vw] w-[20vw] xl:h-[35vh] h-[20vw] sm:w-[85vw] sm:h-[85vw] grid place-items-center">
           <div>
             <h1 class="mb-0 font-bold">GET GRADIENT</h1>
             <h2 class="mb-0 text-xl font-normal">
@@ -49,7 +48,7 @@
             </h2>
           </div>
         </a>
-        <a href="app/quiz.html" class="ITEM no-underline border-2 border-solid group w-[20vw] h-[20vw] sm:w-[85vw] sm:h-[85vw] grid place-items-center">
+        <a href="app/quiz.html" class="ITEM no-underline border-2 border-solid group p-5 xl:w-[24vw] w-[20vw] xl:h-[35vh] h-[20vw] sm:w-[85vw] sm:h-[85vw] grid place-items-center">
           <div>
             <h1 class="mb-0 font-bold">JS QUIZ</h1>
             <h2 class="mb-0 text-xl font-normal">
