fix padding .container

--- a/app/github.html
+++ b/app/github.html
@@ -9,13 +9,11 @@
   </head>
   <body class="text-black">
     <article id="LOADER" class="fixed flex items-center justify-center w-screen h-screen p-0 m-0 text-white" aria-busy="true"></article>
-    <main class="container p-5 text-center sm:w-full">
+    <main class="container p-0 mt-10 text-center sm:w-full">
       <header class="flex justify-between">
-        <div class="flex gap-5">
-          <a class="w-12 sm:w-9" href="../">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 700 750" fill="none"><path class="HEADER_ICONS" fill-rule="evenodd" d="M373.333 746.667 186.667 560 0 373.333l186.667-186.666L373.333 0l99.547 99.557-87.088 87.115L269.5 302.948l584.187-.01-.037 140.786-385.933.011h-198.2l116.27 116.26 87.088 87.114-99.542 99.558Z" clip-rule="evenodd" /></svg>
-          </a>
-        </div>
+        <a class="w-12 sm:w-9" href="../">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 700 750" fill="none"><path class="HEADER_ICONS" fill-rule="evenodd" d="M373.333 746.667 186.667 560 0 373.333l186.667-186.666L373.333 0l99.547 99.557-87.088 87.115L269.5 302.948l584.187-.01-.037 140.786-385.933.011h-198.2l116.27 116.26 87.088 87.114-99.542 99.558Z" clip-rule="evenodd" /></svg>
+        </a>
         <div class="flex items-center gap-5">
           <a class="w-12 sm:w-9" href="https://github.com/bozzhik/js/blob/main/app/github.html" target="_blank">
             <svg viewBox="0 0 612 603" fill="none" xmlns="http://www.w3.org/2000/svg">
