restore getFancy() + onFancyBtn()

--- a/app/gradient.html
+++ b/app/gradient.html
@@ -33,8 +33,8 @@
         </h1>
         <h2 class="text-2xl font-normal sm:text-lg">Generate a random gradient or a fancy one</h2>
         <div class="flex gap-5">
-          <button class="text-3xl font-semibold" id="RANDOM_GENERATE_BTN">Random</button>
-          <button class="text-3xl font-bold outline" id="FANCY_GENERATE_BTN">Fancy</button>
+          <button class="text-3xl font-bold" id="RANDOM_GENERATE_BTN">Random</button>
+          <button class="text-3xl font-semibold outline" id="FANCY_GENERATE_BTN">Fancy</button>
         </div>
         <h2 id="INNER_GRADIENT" class="mt-5 text-2xl font-bold underline cursor-pointer sm:text-lg text-grey-500">background: #fdd835;</h2>
       </main>
