--- a/app/gradient.html
+++ b/app/gradient.html
@@ -33,15 +33,14 @@
         </h1>
         <h2 id="DSC_WEBPAGE" class="mt-2 mb-0 text-2xl font-normal sm:text-lg">Generate a random gradient or a fancy one</h2>
         <h2 id="INNER_GRADIENT" class="mb-5 text-2xl font-bold underline cursor-none mt-7 hover:no-underline sm:text-lg text-grey-500">background: #fdd835;</h2>
-        <div id="COPY_TOOLTIP" class="px-1 font-bold absolute inset-0 invisible translate-y-[10%] -translate-x-[50%] w-fit h-fit">COPY</div>
+        <div id="COPY_TOOLTIP" class="px-1 font-semibold absolute inset-0 invisible translate-y-[10%] -translate-x-[50%] w-fit h-fit">COPY</div>
+        <div id="COPY_SNACKBAR" class="fixed invisible py-3 text-xl font-semibold text-center rounded-sm"></div>
         <div class="flex gap-5">
           <button class="text-3xl font-bold" id="RANDOM_GENERATE_BTN">Random</button>
           <button class="text-3xl font-semibold outline" id="FANCY_GENERATE_BTN">Fancy</button>
         </div>
+        <a href="https://gist.github.com/bozzhik/0eb0ac5fb4af76e90e97f99b0c0a371c" target="_blank" id="TIP_GRADIENT" class="text-xs font-normal underline opacity-50 hover:no-underline">How to make text gradient in CSS?</a>
       </main>
-      <!-- <a class="w-20" href="../">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 700 750" fill="none"><path class="HEADER_ICONS" fill-rule="evenodd" d="M373.333 746.667 186.667 560 0 373.333l186.667-186.666L373.333 0l99.547 99.557-87.088 87.115L269.5 302.948l584.187-.01-.037 140.786-385.933.011h-198.2l116.27 116.26 87.088 87.114-99.542 99.558Z" clip-rule="evenodd" /></svg>
-      </a> -->
     </section>
     <script type="module" src="/src/index.js"></script>
     <script type="module" src="/src/javascript/gradient.js"></script>
