fix minor adaptive issues && limit copy-tooltip for mobile

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="text-black">
     <article id="LOADER" class="fixed flex items-center justify-center w-screen h-screen p-0 m-0 text-white" aria-busy="true"></article>
-    <main class="mt-10 p-0 text-center">
+    <main class="px-5 text-center">
       <section class="container sm:w-full">
         <header class="flex justify-between">
           <a class="w-12 sm:w-9" href="https://github.com/bozzhik/js" target="_blank">
