--- a/app/github.html
+++ b/app/github.html
@@ -9,7 +9,7 @@
   </head>
   <body class="text-black">
     <article id="LOADER" class="fixed flex items-center justify-center w-screen h-screen p-0 m-0 text-white" aria-busy="true"></article>
-    <main class="container p-0 mt-10 text-center sm:w-full">
+    <main class="container px-5 -mt-2 text-center sm:w-full">
       <header class="flex justify-between">
         <a class="w-12 sm:w-9" href="../">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 700 750" fill="none"><path class="HEADER_ICONS" fill-rule="evenodd" d="M373.333 746.667 186.667 560 0 373.333l186.667-186.666L373.333 0l99.547 99.557-87.088 87.115L269.5 302.948l584.187-.01-.037 140.786-385.933.011h-198.2l116.27 116.26 87.088 87.114-99.542 99.558Z" clip-rule="evenodd" /></svg>
@@ -27,7 +27,7 @@
         </div>
       </header>
       <h1 class="mt-32 mb-3 text-7xl sm:text-5xl">
-        <b class="font-bold uppercase">Github</b>
+        <span>Github</span>
         user search
       </h1>
       <h2 class="text-2xl font-normal sm:text-lg">Enter the user's nickname and get the data</h2>
