--- a/app/gradient.html
+++ b/app/gradient.html
@@ -9,7 +9,7 @@
   </head>
   <body class="text-black">
     <article id="LOADER" class="fixed flex items-center justify-center w-screen h-screen p-0 m-0 text-white" aria-busy="true"></article>
-    <section class="container mt-10">
+    <section class="container px-5 mt-7">
       <header class="flex justify-between">
         <a class="w-12 sm:w-9" href="../">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 700 750" fill="none"><path class="HEADER_ICONS" fill-rule="evenodd" d="M373.333 746.667 186.667 560 0 373.333l186.667-186.666L373.333 0l99.547 99.557-87.088 87.115L269.5 302.948l584.187-.01-.037 140.786-385.933.011h-198.2l116.27 116.26 87.088 87.114-99.542 99.558Z" clip-rule="evenodd" /></svg>
