import vite-partials-plugin && split _snack-bar js code && add snack-bar partial

--- a/project/gradient.html
+++ b/project/gradient.html
@@ -34,7 +34,7 @@
         <h2 id="DSC_WEBPAGE" class="mt-2 mb-0 text-2xl font-normal sm:text-lg">Generate a random gradient or a fancy one</h2>
         <h2 id="INNER_GRADIENT" class="mb-5 text-2xl font-bold underline mt-7 hover:no-underline sm:text-lg text-grey-500">background: #fdd835;</h2>
         <div id="COPY_TOOLTIP" class="px-1 font-semibold absolute inset-0 invisible translate-y-[70%] -translate-x-[-25%] w-fit h-fit">COPY</div>
-        <div id="COPY_SNACKBAR" class="fixed invisible py-3 text-xl font-semibold text-center rounded-sm"></div>
+        <vite-partial src="../src/partials/snack-bar.html" />
         <div class="flex gap-5">
           <button class="text-3xl font-bold" id="RANDOM_GENERATE_BTN">Random</button>
           <button class="text-3xl font-semibold outline" id="FANCY_GENERATE_BTN">Fancy</button>
